# My-Codes

Code Test/: Acceleration.java  Binary.java  BinarySum.java  ComparingIntegers.java  Comparison.java  EvenOddSumAnother.java  EvenSumTest.java  FMultiplication.java  ForLoopTest.java  GameTest.java  GameWhile.java  Hello.java  HelloWorld.java  LoopTest.java  LoopTest2.java  MortgageTest.java  Multiplication.java  MultiplicationDD.java  MysteryExercise.java  MysteryGameLoop.java  NokiaTest.java  Occurence.java  OccurenceMax.java  Prime.java  PromptUserr.java  RedoMysteryGame.java  RedoMysteryGame2.java  RedoMysteryGame3.java  Rock.java  StudentGrade.java  SumOfDIgitAnother.java  TryAndCatch.java  Welcome3.java  WelcomeAgain.java  example of EvenandSum.java  import java.util.Scanner.java
Flask/FlaskLearning/: app.py  pyproject.toml
Product/BookStore/: apiScript.js  index.html
Product/Calculator/: apiscript.js  index.html  style.css
Product/TodoList/: index.html  style.css  todo.js
Product/product/: api_script.js  products.css  products.html
PycharmProjects/Todo_List/: .env  pyproject.toml  settings.py
PycharmProjects/Todo_List/src/todo/configurations/: database_configuration.py
PycharmProjects/Todo_List/src/todo/data/models/: task.py  user.py
PycharmProjects/Todo_List/src/todo/data/repositories/: tasks.py  tasks_interface.py  users_interface.py
PycharmProjects/Todo_List/src/todo/dtos/requests/: task_requests.py  user_requests.py
PycharmProjects/Todo_List/src/todo/dtos/responses/: task_responses.py  user_responses.py
(+11 files in other folders)
